SERVER-46897 Clear replication node seed list whenever we install a new config that we are not a member of

(cherry picked from commit c2b282a1ba5f4f87d59456912073398a504281dc)