src/mongo/db/repl/replication_coordinator_impl.cpp
@@ -3362,6 +3362,9 @@ ReplicationCoordinatorImpl::_setCurrentRSConfig(WithLock lk,
         // Don't send heartbeats if we're not in the config, if we get re-added one of the
         // nodes in the set will contact us.
         _startHeartbeats_inlock();
+    } else {
+        // If we're still REMOVED, clear the seedList.
+        _seedList.clear();
     }
     _updateLastCommittedOpTimeAndWallTime(lk);
 
